<resources>
    <string name="Rs">\u20B9</string>
    <string name="app_name">GingerBuds</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search_meals</string>
    <string name="action_cart">cart</string>
    <string name="search_hint">Serach meals</string>
    <string name="search_settings">Search Places</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_profile_page">Profile</string>
    <string name="nav_item_order_history">Order History</string>
    <string name="nav_item_order_tracking">Order Tracking</string>
    <string name="nav_item_refer_earn">Refer &amp; earn</string>
    <string name="nav_item_cotact_us">Contact Us</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_profile_page</item>
        <item>@string/nav_item_order_history</item>
        <item>@string/nav_item_order_tracking</item>
        <item>@string/nav_item_refer_earn</item>
        <item>@string/nav_item_cotact_us</item>

    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="tilte_full_menu">Full Menu</string>
    <string name="title_order_history">Order History</string>
    <string name="title_order_tracking">Order Tracking</string>
    <string name="title_refer_earn">Refer &amp; earn</string>
    <string name="title_contact_us">Contact Us</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_full_menu">FullMenuActivity</string>
    <string name="title_activity_cart_items">CartItemsActivity</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_map_vans">MapVansActivity</string>
    <string name="title_activity_sample">sample</string>
    <string name="fliter_veg">Veg</string>
    <string name="filter_home_rest"><![CDATA[Home & Resto]]></string>
    <string name="filter_cuisine">Cuisine</string>
    <string name="filter_reset">Reset</string>
    <string name="title_activity_check_out_status">CheckOutStatusActivity</string>
    <string name="title_activity_add_adress">AddAdressAct</string>
    <string name="title_activity_show_address">ShowAddressAct</string>
    <string name="title_activity_all_addresses">AllAddressesAct</string>
    <string name="title_activity_add_address">AddAddressAct</string>
    <string name="title_activity_select_place">SelectPlaceAct</string>
    <string name="title_activity_order_history">OrderHistoryAct</string>
    <string name="veg_text">Veg</string>
    <string name="title_activity_refer_earn">ReferEarnAct</string>
    <string name="title_activity_login">LoginAct</string>
    <string name="title_activity_sign_up">SignUpAct</string>
    <string name="title_activity_make_payment">MakePaymentAct</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_gcm">MainGCMActivity</string>
    <string name="veg_and_nonveg"><![CDATA[Veg & NonVeg]]></string>
    <string name="title_activity_contact_us">ContactUsAct</string>
    <string name="title_activity_profile_page">ProfilePageAct</string>
    <string name="title_activity_order_track">OrderTrackAct</string>
    <string name="title_activity_personal_info">PersonalInfoAct</string>
    <string name="title_activity_order_cancle">OrderCancleAct</string>
    <string name="search_hint2">search places</string>
    <string name="title_activity_subscription">Subscription</string>
    <string name="title_activity_schedule_subsribe">ScheduleSubsribeAct</string>
    <string name="timeslot">Time Slot</string>
    <string name="title_activity_schedule_my_plan">ScheduleMyPlanAct</string>

</resources>