<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/root"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_full_menu"
    tools:context="info.androidhive.materialdesign.activity.FullMenuActivity"
    android:weightSum="5"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/pad_10dp"
        android:id="@+id/present_loc_layout">
        <ImageView
            android:paddingTop="@dimen/pad_5dp"
            android:paddingLeft="@dimen/pad_5dp"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:id="@+id/present_loc_icon"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/present_loc_text"
            android:text="Bhomi Heights Khargar is some thing we have in"
            android:textSize="15dp"
            android:layout_toRightOf="@+id/present_loc_icon"
            android:paddingLeft="@dimen/pad_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toLeftOf="@+id/present_loc_btn"
            />
        <Button
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:text="Edit"
            android:textSize="@dimen/txt_12sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/present_loc_btn"
            android:layout_alignTop="@+id/present_loc_text" />
    </RelativeLayout>
   <ListView
       android:background="@color/background"
       android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/meals_list_view"
        android:listSelector="@drawable/list_row_selector"
        android:focusable="true"
        tools:listItem="@layout/meals_list_single_row"
        android:layout_weight="5"
       />

    <LinearLayout
        android:paddingTop="@dimen/pad_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:paddingBottom="@dimen/pad_10dp"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
        <ImageView
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_marginRight="@dimen/pad_10dp"
            android:adjustViewBounds="true"
            android:id="@+id/slideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/veg_non_veg_filter"
            android:onClick="slideUpDown"
            android:background="@color/white"
            android:clickable="true"
            android:layout_gravity="center"
           />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/veg_text"
                android:text="@string/veg_and_nonveg"
                android:textSize="10sp"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
        <ImageView
            android:clickable="true"
            android:adjustViewBounds="true"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_marginRight="@dimen/pad_10dp"
            android:background="@color/white"
            android:id="@+id/slideButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home_restaraunt"
            android:onClick="slideUpDown2"
            android:textAllCaps="false"
            android:layout_weight="1"
           />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_text"
                android:textSize="10sp"
                android:gravity="center"
                android:text="@string/filter_home_rest"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
        <ImageView
            android:clickable="true"
            android:adjustViewBounds="true"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:layout_marginRight="@dimen/pad_10dp"
            android:background="@color/white"
            android:id="@+id/slideButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cuisine_icon"
            android:onClick="slideUpDown3"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_cuisine"
                android:id="@+id/cuis_text"
                android:textSize="10sp"
                android:gravity="center"
                />
         </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="1">
        <ImageView
            android:clickable="true"
            android:layout_marginLeft="@dimen/pad_10dp"
            android:adjustViewBounds="true"
            android:layout_marginRight="@dimen/pad_10dp"
            android:background="@color/white"
            android:id="@+id/slideButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/reset_icon"
            android:onClick="slideUpReset"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:id="@+id/reset_text"
                android:gravity="center"
                android:text="@string/filter_reset"/>
         </LinearLayout>
    </LinearLayout>
</LinearLayout>



