<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_map_vans"
    tools:context="info.androidhive.materialdesign.activity.MapVansActivity"
    android:orientation="vertical"
    android:id="@+id/root">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="false" />
    <ImageView
        android:id="@+id/loc_Image"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_location"
         />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_above="@+id/taus"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/pad_10dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow"
            android:id="@+id/layout_full_menu"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical"
            >
            <TextView
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Full Menu"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12sp"
                android:id="@+id/textView6"
                />
            <LinearLayout
                android:paddingLeft="@dimen/pad_5dp"
                android:paddingRight="@dimen/pad_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:paddingTop="0dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:id="@+id/dishes_box"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/full_menu_dishes1"
                        android:text="699"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:gravity="center_horizontal" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dishes"
                        android:textSize="10dp"
                        android:textColor="@color/black"
                        android:id="@+id/textView3"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/image_min_menu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/full_menu_dish_icon3"
                        android:adjustViewBounds="true"
                        android:visibility="visible"
                         />
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Rs"
                        android:textSize="18sp"
                        android:id="@+id/full_menu_price2"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_weight="1" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="StartsAt"
                        android:textSize="10dp"
                        android:layout_weight="1"
                        android:id="@+id/start_at" />
                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow"
            android:id="@+id/layout_minute_menu"
            android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:orientation="vertical"

            >
            <TextView
                android:paddingTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="13 Minute Menu"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="12sp"
                android:id="@+id/mintext"
                android:layout_gravity="center_horizontal"
               />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/pad_5dp"
                android:paddingTop="0dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/minute_menu_dishes"
                android:text="105"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dishes"
                android:textSize="10dp"
                android:textColor="@color/black"
                android:id="@+id/text_dishes"
                android:gravity="center"
                />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="top|center_horizontal"
                android:layout_weight="1">
            <ImageView
                android:layout_marginTop="@dimen/pad_5dp"
                android:id="@+id/image_min_menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/full_menu_dish_icon3"
                android:adjustViewBounds="true"
               />
                </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="55"
                android:textSize="18sp"
                android:id="@+id/minute_menu_price"
                android:gravity="center"
                android:textColor="@color/white"
                />
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="StartsAt"
                android:textSize="10dp"
                android:id="@+id/min_menu_start_at"
                />
            </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/taus"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:paddingTop="@dimen/pad_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/buttons"

            android:paddingBottom="@dimen/pad_10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <ImageView
                    android:layout_marginLeft="@dimen/pad_20dp"
                    android:layout_marginRight="@dimen/pad_20dp"
                    android:adjustViewBounds="true"
                    android:id="@+id/slideButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/veg_non_veg_filter"
                    android:onClick="slideUpDown"
                    android:background="@color/white"
                    android:clickable="true"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/veg_text"
                    android:text="Veg"
                    android:textSize="10sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <ImageView
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="@dimen/pad_20dp"
                    android:layout_marginRight="@dimen/pad_20dp"
                    android:background="@color/white"
                    android:id="@+id/slideButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_restaraunt"
                    android:onClick="slideUpDown2"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/home_text"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:text="@string/filter_home_rest"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"

                android:layout_weight="1">
                <ImageView
                    android:clickable="true"
                    android:adjustViewBounds="true"
                    android:layout_marginLeft="@dimen/pad_20dp"
                    android:layout_marginRight="@dimen/pad_20dp"
                    android:background="@color/white"
                    android:id="@+id/slideButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cuisine_icon"
                    android:onClick="slideUpDown3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_cuisine"
                    android:id="@+id/cuis_text"
                    android:textSize="10sp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="1">
                <ImageView
                    android:clickable="true"
                    android:layout_marginLeft="@dimen/pad_20dp"

                    android:adjustViewBounds="true"
                    android:layout_marginRight="@dimen/pad_20dp"
                    android:background="@color/white"
                    android:id="@+id/slideButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/reset_icon"
                    android:layout_weight="1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:id="@+id/reset_text"
                    android:gravity="center"
                    android:text="@string/filter_reset"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/pad_10dp"
        android:id="@+id/present_loc_layout">
        <ImageView
            android:paddingLeft="@dimen/pad_5dp"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/location_icon"
            android:id="@+id/present_loc_icon"
            />
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/present_loc_text"
            android:text="Bhomi Heights Khargar is some thing we have in"
            android:textSize="15dp"
            android:layout_toRightOf="@+id/present_loc_icon"
            android:paddingLeft="@dimen/pad_10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toLeftOf="@+id/present_loc_btn"
             />
        <Button
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/white"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:text="Edit"
            android:textSize="@dimen/txt_12sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/present_loc_btn"
            android:layout_alignTop="@+id/present_loc_text" />
    </RelativeLayout>

</RelativeLayout>
